src/app/component/user/profile/profile.component.scss
section {
  font-size: 62.5%;
  color: black;
  display: flex;
  justify-content: space-between;
  height: 100%;
  width: 96%;
  margin: 0 auto;
  flex-direction: row;

  .column {
    box-sizing: border-box;
    justify-content: center;
    background-color: rgba(7, 206, 33, 0.1);
    text-align: center;
    justify-content: center;
    font-size: 5rem;
    border: 1px solid transparentize(white, 0.25);
    color: black;

    div {
      width: 100%;
      box-sizing: inherit;
    }

    &:nth-of-type(odd) {
      flex-basis: 23%;
    }

    &:nth-of-type(2) {
      flex-basis: 48%;
      margin: 0 3% 0 3%;
    }
  }

  .right-column {
    height: 350px;

    .right-cards {
      .card {
        height: auto;
        color: white;
        text-align: left;
        padding: 16px 20px 0px 16px;
        margin-top: 24px;

        .cart-title {
          font-family: 'Montserrat', sans-serif;
          font-weight: bold;
          font-size: 15px;
        }

        .card-description {
          font-size: 13px;
          font-family: 'Open Sans';
        }

        .shape-img {
          img {
            position: absolute;
            bottom: -1px;
            left: 0;
            right: 0px;
            width: 100%;
            height: 60%;
          }
        }
      }
    }
  }
}

@media (max-width: 768px) {
  section {
    color: red;
    flex-direction: column;

    .column:first-child {
      order: 1;
    }

    .column:last-child {
      order: 2;
      margin: 2rem 0;
    }

    .column:nth-of-type(2) {
      order: 3;
      margin: 0;
      flex-grow: 1;
    }
  }
}

